--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^4.5.2",
     "axios": "^0.19.0",
+    "radium": "^0.26.0",
     "react": "^16.11.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0"
   },
